# integrationos

./: .dockerignore  .env-example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.common  README.md  docker-compose.data.yml  docker-compose.yml
event-core/: Cargo.toml
event-core/src/: config.rs  dispatcher.rs  event_handler.rs  lib.rs  main.rs  metrics.rs  mongo_context_store.rs  mongo_control_data_store.rs  store.rs
event-core/src/mocks/: mock_context_store.rs  mock_secret_service.rs  mod.rs
event-core/tests/: mock_destination.rs  mock_storage.rs
gateway/: Cargo.toml  README.md
gateway/benches/: bench.rs
gateway/src/: config.rs  event_request.rs  finalize_event.rs  finalizer.rs  lib.rs  main.rs  mock_finalizer.rs  server.rs  state.rs
gateway/src/mock/: finalizer.rs
integrationos-api/: Cargo.toml  Dockerfile  README.md
integrationos-api/src/: api_payloads.rs  config.rs  lib.rs  main.rs  metrics.rs  server.rs
integrationos-api/src/domain/: config.rs  metrics.rs  mod.rs
integrationos-api/src/endpoints/: common_enum.rs  common_model.rs  connection.rs  connection_definition.rs  connection_model_definition.rs  connection_model_schema.rs  connection_oauth_definition.rs  event_access.rs  events.rs  metrics.rs  mod.rs  oauth.rs  openapi.rs  passthrough.rs  pipeline.rs  platform.rs  platform_page.rs  schema_generator.rs  unified.rs  utils.rs
integrationos-api/src/helper/: k8s_driver.rs  mod.rs  shape_mongo_filter.rs
integrationos-api/src/logic/: common_enum.rs  common_model.rs  connection.rs  connection_definition.rs  connection_model_definition.rs  connection_model_schema.rs  connection_oauth_definition.rs  database.rs  event_access.rs  event_callback.rs  events.rs  metrics.rs  mod.rs  oauth.rs  passthrough.rs  pipeline.rs  platform.rs  platform_page.rs  schema_generator.rs  secrets.rs  transactions.rs  unified.rs  utils.rs  vault_connection.rs
integrationos-api/src/middleware/: auth.rs  blocker.rs  extractor.rs  header_auth.rs  header_passthrough.rs  jwt_auth.rs  mod.rs  rate_limiter.rs
integrationos-api/src/router/: mod.rs  public.rs  secured_jwt.rs  secured_key.rs
integrationos-api/src/routes/: authenticated.rs  mod.rs  protected.rs  public.rs  secured_jwt.rs  secured_key.rs
integrationos-api/src/util/: mod.rs
integrationos-api/tests/: checker.rs  context.rs  main.rs
integrationos-api/tests/api_tests/: auth_tests.rs  connection_tests.rs  get_tests.rs  main.rs  pagination_tests.rs  passthrough_tests.rs  test_crud.rs  transaction_tests.rs  unified_tests.rs
integrationos-api/tests/http/: auth.rs  callback.rs  connection.rs  crud.rs  mod.rs  pagination.rs  passthrough.rs  schema.rs  transaction.rs  unified.rs
integrationos-api/tests/resource/: integrationos_domain::domain::connection::Connection.bson  integrationos_domain::domain::connection::Connection.json  integrationos_domain::domain::connection::connection_definition::ConnectionDefinition.bson  integrationos_domain::domain::connection::connection_definition::ConnectionDefinition.json  integrationos_domain::domain::connection::connection_model_definition::ConnectionModelDefinition.bson  integrationos_domain::domain::connection::connection_model_definition::ConnectionModelDefinition.json  integrationos_domain::domain::connection::connection_model_schema::ConnectionModelSchema.bson  integrationos_domain::domain::connection::connection_model_schema::ConnectionModelSchema.json  integrationos_domain::domain::schema::common_model::CommonEnum.bson  integrationos_domain::domain::schema::common_model::CommonEnum.json  integrationos_domain::domain::schema::common_model::CommonModel.bson  integrationos_domain::domain::schema::common_model::CommonModel.json
integrationos-api/tests/standard/: mod.rs
integrationos-api/tests/worker/: event.rs  gateway.rs  mod.rs
integrationos-archiver/: Cargo.toml  Dockerfile  README.md
integrationos-archiver/src/: config.rs  main.rs
integrationos-archiver/src/domain/: config.rs
integrationos-archiver/src/event/: chosen.rs  completed.rs  dumped.rs  failed.rs  finished.rs  mod.rs  started.rs  uploaded.rs
integrationos-archiver/src/storage/: google_cloud.rs  mod.rs
integrationos-cache/: Cargo.toml  README.md
integrationos-cache/src/: lib.rs  local.rs  remote.rs
integrationos-cache/src/local/: connection_cache.rs  connection_definition_cache.rs  connection_model_definition_cache.rs  connection_model_schema_cache.rs  connection_oauth_definition_cache.rs  event_access_cache.rs  mod.rs  secrets_cache.rs
integrationos-domain/: .gitignore  Cargo.toml  README.md
integrationos-domain/src/: lib.rs
integrationos-domain/src/algebra/: cache.rs  crypto.rs  fetcher.rs  hash.rs  json.rs  mod.rs  oauth.rs  pipeline.rs  secret.rs  store.rs  string.rs  template.rs  timed.rs
integrationos-domain/src/domain/: mod.rs
integrationos-domain/src/service/: mod.rs
integrationos-emit/: Cargo.toml  Dockerfile  README.md
integrationos-emit/src/: lib.rs  main.rs  server.rs
integrationos-emit/src/algebra/: event.rs  metrics.rs  mod.rs
integrationos-emit/src/domain/: config.rs  deduplication.rs  event.rs  idempotency.rs  metrics.rs  mod.rs
integrationos-emit/src/logic/: emitter.rs  mod.rs
integrationos-emit/src/middleware/: idempotency.rs  mod.rs
integrationos-emit/src/router/: emitter.rs  metrics.rs  mod.rs
integrationos-emit/src/stream/: fluvio_driver.rs  logger_driver.rs  mod.rs  pusher.rs  scheduler.rs
integrationos-emit/tests/: context.rs
integrationos-emit/tests/http/: emitter.rs
integrationos-snapshot/: Cargo.toml
integrationos-snapshot/src/: config.rs  main.rs
integrationos-storage/: Cargo.toml  Dockerfile
integrationos-storage/src/: config.rs  lib.rs  main.rs  server.rs  storage.rs
integrationos-unified/: Cargo.toml  README.md
integrationos-unified/src/: client.rs  lib.rs  request.rs  unified.rs  utility.rs
integrationos-watchdog/: Cargo.toml  Dockerfile
integrationos-watchdog/src/: client.rs  config.rs  main.rs
redis-retry/: Cargo.toml
redis-retry/src/: config.rs  lib.rs
watchdog/: Cargo.toml
watchdog/src/: config.rs  main.rs
(+330 files in other folders)
