[workspace]

resolver = "2"

members = [
    "api",
    "event-core",
    "gateway",
    "google-token-fetcher",
    "redis-retry",
    "watchdog",
]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = "0.6.20"
axum-macros = "0.3.8"
base64 = "0.21.5"
base64ct = { version = "1.6.0", features = ["alloc"] }
bson = "2.7.0"
chrono = { version = "0.4.31", features = ["serde"] }
convert_case = "0.6.0"
dotenvy = "0.15.7"
envconfig = "0.10.0"
fake = { version = "=2.9.1", features = [
    "uuid",
    "derive",
    "dummy",
    "chrono",
    "rand_core",
    "http",
    "serde_json",
    "semver",
] }
futures = "0.3.28"
futures-util = "0.3.28"
handlebars = "4.4.0"
http = "0.2.9"
http-serde-ext = "0.1.8"
integrationos-domain = "0.1.5"
js-sandbox-ios = "0.1.0"
jsonpath_lib = "0.3.0"
jsonwebtoken = "8.3.0"
mockito = "1.2.0"
moka = { version = "0.12.1", features = ["future"] }
mongodb = "2.7.0"
once_cell = "1.18.0"
openapiv3 = { version = "2.0.0", features = ["skip_serializing_defaults"] }
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = [
    "json",
    "rustls-tls",
], default-features = false }
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"
sha2 = { version = "0.10.6", features = ["asm"] }
strum = { version = "0.25", features = ["derive"] }
testcontainers-modules = "0.3"
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
tower-http = { version = "0.4.4", features = [
    "trace",
    "cors",
    "sensitive-headers",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }

[profile.release]
lto = true
