[package]
name = "event-core"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bson.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
futures.workspace = true
handlebars.workspace = true
http.workspace = true
integrationos-domain = { workspace = true, features = ["unified"] }
js-sandbox-ios.workspace = true
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
moka.workspace = true
mongodb.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-condvar = "0.1.0"
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
testcontainers-modules = { workspace = true, features = ["mongo"] }
chrono.workspace = true
fake.workspace = true
mockito.workspace = true
uuid.workspace = true

[[test]]
name = "mock_destination"
required-features = ["integrationos-domain/dummy"]

[[test]]
name = "mock_storage"
required-features = ["integrationos-domain/dummy"]
