[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum-macros.workspace = true
axum-prometheus = "0.4.0"
axum.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
http.workspace = true
http-serde-ext.workspace = true
integrationos-domain.workspace = true
moka.workspace = true
mongodb.workspace = true
redis-retry = { path = "../redis-retry" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
tower = { version = "0.4", features = ["util"] }

[[bench]]
name = "bench"
harness = false
