[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum-prometheus = "0.6.1"
axum.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
futures.workspace = true
http-serde-ext.workspace = true
http.workspace = true
integrationos-domain.workspace = true
moka.workspace = true
mongodb.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
http-body-util = "0.1.1"
tower = { version = "0.4", features = ["util"] }

[[bench]]
name = "bench"
harness = false
