[package]
name = "integrationos-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bson.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
futures.workspace = true
google-cloud-storage = "0.23.0"
http.workspace = true
integrationos-domain = { path = "../integrationos-domain" }
integrationos-unified = { path = "../integrationos-unified" }
mongodb.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-tracing = "0.5.4"
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
tempfile = "3.14.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.12"
tracing.workspace = true

[dev-dependencies]
fake = { workspace = true, features = [
    "uuid",
    "derive",
    "dummy",
    "chrono",
    "rand_core",
    "http",
    "serde_json",
    "semver",
] }
