[package]
name = "integrationos-cache"
description = "Cache library for IntegrationOS"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool-redis = { version = "0.15.1", features = ["serde"] }
futures.workspace = true
http.workspace = true
integrationos-domain = { path = "../integrationos-domain", features = ["dummy"] }
moka.workspace = true
fake.workspace = true
mongodb.workspace = true
redis = { workspace = true, features = ["tls-native-tls", "tls", "tokio-native-tls-comp", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lib]
path = "src/lib.rs"
