[package]
name = "integrationos-domain"
description = "Shared library for IntegrationOS"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/integration-os/integrationos-domain"

[features]
default = ["unified"]

# This feature can be used for tests to provide dummy implementations
dummy = ["dep:fake"]

# This feature provides access to unified-destination functionality.
unified = ["metrics", "dep:handlebars", "dep:moka"]

# This feature is for using napi to export structs to an npm package
napi = ["dep:napi", "dep:napi-derive"]

# This feature allows you to measure the time it takes to execute a future
metrics = ["dep:pin-project"]

# This feature enables error response for actix-web
actix-error = ["dep:actix-web"]

# This feature enables error response for axum
axum-error = ["dep:axum"]

[dependencies]

jsonpath_lib = "0.3.0"
actix-web = { version = "4.5.1", optional = true }
aes = "0.8.3"
anyhow = "1.0.79"
async-recursion = "1.0.5"
async-trait = "0.1.77"
axum = { version = "0.7.5", optional = true }
base64 = "0.21.7"
base64ct = { version = "1.6.0", features = ["alloc"] }
bson = "2.9.0"
chrono = { version = "0.4.32", features = ["serde"] }
ctr = "0.9.2"
downcast-rs = "1.2.0"
envconfig = "0.10.0"
fake = { version = "2.9.2", features = [
    "uuid",
    "derive",
    "chrono",
    "http",
    "serde_json",
    "semver",
], optional = true }
futures = "0.3.30"
handlebars = { version = "4.4.0", optional = true }
http = "1.1.0"
http-serde-ext = "1.0.2"
indexmap = "2.1.0"
js-sandbox-ios = "0.1.0"
moka = { workspace = true, optional = true }
mongodb = "2.8.0"
napi = { version = "2.14.2", default-features = false, features = [
    "napi4",
], optional = true }
napi-derive = { version = "2.14.6", optional = true }
openapiv3 = "2.0.0"
pin-project = { version = "1.1.4", optional = true }
prost = "0.12.3"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["connection-manager", "tokio-comp"] }
reqwest = { version = "0.12.3", features = [
    "json",
    "rustls-tls",
], default-features = false }
semver = { version = "1.0.21", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
sha3 = "0.10.8"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"

[dev-dependencies]
once_cell = "1.19.0"
mockito = "1.2.0"
schemars = "0.8.16"
