[package]
name = "integrationos-domain"
description = "Shared library for IntegrationOS"
license = "GPL-3.0"
version = "5.0.1"
edition = "2021"
repository = "https://github.com/integration-os/integrationos-domain"

[features]
# This feature can be used for tests to provide dummy implementations
dummy = ["dep:fake"]

[dependencies]

jsonpath_lib.workspace = true
aes = "0.8.3"
anyhow.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
axum.workspace = true
base64ct.workspace = true
base64.workspace = true
bson.workspace = true
chrono.workspace = true
ctr = "0.9.2"
downcast-rs = "1.2.0"
envconfig.workspace = true
fake = { workspace = true, features = [
    "uuid",
    "derive",
    "chrono",
    "http",
    "serde_json",
    "semver",
], optional = true }
futures.workspace = true
handlebars.workspace = true
http.workspace = true
http-serde-ext.workspace = true
indexmap = "2.1.0"
js-sandbox-ios.workspace = true
mongodb.workspace = true
napi = { version = "2.14.2", default-features = false, features = ["napi4"] }
napi-derive = "2.14.6"
openapiv3.workspace = true
pin-project = "1.1.4"
prost = "0.12.3"
rand.workspace = true
reqwest = { workspace = true, features = [
    "json",
    "rustls-tls",
], default-features = false }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
sha2.workspace = true
sha3 = "0.10.8"
strum = { workspace = true, features = ["derive"] }
thiserror = "1.0.56"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
digest = "0.10.7"
hmac = { version = "0.12.1", features = ["std"] }
percent-encoding = "2.3.1"
sha1 = "0.10.6"

[dev-dependencies]
once_cell = "1.19.0"
mockito = "1.2.0"
schemars = "0.8.16"
