[package]
name = "integrationos-domain"
description = "Shared library for IntegrationOS"
license = "GPL-3.0"
version = "8.0.0"
edition = "2021"
repository = "https://github.com/integration-os/integrationos-domain"

[features]
# This feature can be used for tests to provide dummy implementations
dummy = ["dep:fake"]

[dependencies]
aes = "0.8.3"
anyhow.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
base64ct.workspace = true
bson.workspace = true
chrono.workspace = true
ctr = "0.9.2"
digest = "0.10.7"
downcast-rs = "1.2.0"
envconfig.workspace = true
fake = { workspace = true, features = [
    "uuid",
    "derive",
    "chrono",
    "http",
    "serde_json",
    "semver",
], optional = true }
futures.workspace = true
google-cloud-kms = { version = "0.5.1", features = [
    "async-trait",
    "k256",
    "trace",
] }
handlebars.workspace = true
hmac = { version = "0.12.1", features = ["std"] }
http-serde-ext.workspace = true
http.workspace = true
indexmap = "2.1.0"
js-sandbox-ios.workspace = true
jsonpath_lib.workspace = true
jsonwebtoken.workspace = true
kube.workspace = true
k8s-openapi = { workspace = true, features = ["latest"] }
mongodb.workspace = true
napi = { version = "2.14.2", default-features = false, features = ["napi4"] }
napi-derive = "2.14.6"
openapiv3.workspace = true
percent-encoding = "2.3.1"
pin-project = "1.1.4"
prost = "0.12.3"
rand.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
sha1 = "0.10.6"
sha2.workspace = true
sha3 = "0.10.8"
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true, features = ["attributes"] }
uuid = { workspace = true, features = ["v4"] }
crc32fast = "1.4.2"
secrecy = { version = "0.8.0", features = ["serde"] }
chacha20poly1305 = "0.10.1"
hex = { version = "0.4.3", features = ["serde"] }
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry-otlp = "0.26"
tracing-opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace"] }

[dev-dependencies]
once_cell = "1.19.0"
mockito = "1.2.0"
schemars = "0.8.16"
