[package]
name = "integrationos-emit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
fluvio = "0.23.3"
futures-util.workspace = true
futures.workspace = true
http-serde-ext.workspace = true
http.workspace = true
integrationos-domain = { path = "../integrationos-domain" }
mongodb.workspace = true
num_cpus.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
reqwest-tracing = "0.5.3"
serde = { workspace = true , features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http.workspace = true
tracing.workspace = true
tokio-util = "0.7.12"
log = "0.4.22"
ctrlc = { version = "3.4.5", features = ["termination"] }
axum-server = "0.7.1"
tokio-graceful-shutdown = "0.15.1"

[dev-dependencies]
testcontainers-modules = { workspace = true, features = ["mongo"] }
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
