[package]
name = "integrationos-emit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-prometheus = "0.7"
chrono.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
fluvio = "0.23.4"
futures-util.workspace = true
futures.workspace = true
http-serde-ext-ios.workspace = true
http.workspace = true
integrationos-domain = { path = "../integrationos-domain" }
mongodb.workspace = true
num_cpus.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-tracing = "0.5.4"
serde = { workspace = true , features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-graceful-shutdown = "0.15.2"
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
mockito.workspace = true
testcontainers-modules = { workspace = true, features = ["mongo"] }
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
