[package]
name = "integrationos-snapshot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bson.workspace = true
chrono = { workspace = true, features = ["serde"] }
envconfig.workspace = true
dotenvy.workspace = true
futures.workspace = true
integrationos-cache = { path = "../integrationos-cache" }
integrationos-domain = { path = "../integrationos-domain" }
mongodb.workspace = true
reqwest = { workspace = true, features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
