[package]
name = "integrationos-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
futures-util.workspace = true
futures.workspace = true
http-serde-ext.workspace = true
http.workspace = true
hyper = "0.14.27"
integrationos-cache = { path = "../integrationos-cache" }
integrationos-domain = { path = "../integrationos-domain" }
integrationos-unified = { path = "../integrationos-unified" }
mongodb.workspace = true
num_cpus = "1"
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "json", "macros", "chrono", "uuid", "rust_decimal", "ipnetwork"] }
tokio.workspace = true
tower = { version = "0.4.13", features = ["filter"] }
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
