[package]
name = "integrationos-unified"
description = "Unified service library for IntegrationOS"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonpath_lib.workspace = true
bson.workspace = true
chrono = { workspace = true, features = ["serde"] }
derive_builder.workspace = true
integrationos-cache = { path = "../integrationos-cache" }
integrationos-domain = { path = "../integrationos-domain" }
futures.workspace = true
handlebars.workspace = true
http.workspace = true
http-serde-ext-ios.workspace = true
js-sandbox-ios.workspace = true
mongodb.workspace = true
reqwest = { workspace = true, features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
indexmap = "2.6.0"

[dev-dependencies]
mockito = "1.6.1"

[lib]
path = "src/lib.rs"
