[package]
name = "redis-retry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
envconfig.workspace = true
futures-util.workspace = true
redis = { version = "0.23.3", features = ["connection-manager", "tokio-comp"] }
tracing.workspace = true
