[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
redis-retry = { path = "../redis-retry" }
chrono.workspace = true
mongodb.workspace = true
envconfig.workspace = true
dotenvy.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tracing.workspace = true
integrationos-domain.workspace = true
anyhow.workspace = true
futures.workspace = true
serde_json.workspace = true
