[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
futures.workspace = true
integrationos-domain.workspace = true
mongodb.workspace = true
redis.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

